# local-docsher

./: .gitignore  README.md  pyproject.toml
docs/research/: lds-017-hwp-hwpx.md
sample_docs_hwp/: README.md  simple.hwp.manifest.md  simple.hwpx  table.hwpx
src/docsher/: __init__.py  __main__.py  api.py  ask.py  chunker.py  cli.py  config.py  db.py  indexer.py  llm.py  ocr.py  parsers_hwp.py  parsers_office.py  parsers_text.py  scanner.py  scheduler.py  search.py  status.py  summarize.py
tests/: test_api.py  test_ask.py  test_chunker.py  test_config.py  test_db.py  test_index_status.py  test_indexer_text.py  test_llm.py  test_ocr_index_integration.py  test_ocr_paddle.py  test_ocr_pipeline.py  test_ocr_queue.py  test_ocr_unlimited.py  test_parsers_hwp.py  test_parsers_office.py  test_parsers_text.py  test_sample_docs_hwp.py  test_scanner.py  test_scheduler.py  test_search.py  test_smoke.py  test_summarize.py  test_web_ui.py
